@@ -32,11 +32,11 @@ The Linux installers will register an entry in the DEB or RPM databases and inst
 <br><div class="console">
  /usr/local/mrViewer-v${VERSION}-${PLATFORM}. 
 <br></div>
- The utilities dpkg (DEB) or rpm (RPM) will additionally create symlinks in /usr/bin/ and install the icon in /usr/share/applications which will show in the menus (Graphics).
+ The utilities dpkg (DEB) or rpm (RPM) will additionally create symlinks in /usr/bin/ and install the icon in /usr/share/applications which will show in the menus (Graphics).  The icon will also be copied to the user's Desktop.
 <br>
 <br>
 
-The <div class="console">mrViewer-v${VERSION}-${PLATFORM}/bin</div> directory among all things contains the file mrViewer.exe (Windows) or mrViewer.sh (Linux).  Running this file will start the viewer.<br>
+The <div class="console">mrViewer-v${VERSION}-${PLATFORM}/bin</div> directory among all things contains the file mrViewer.exe (Windows) or mrViewer.sh (Linux).  Running this file or any of the icons will start the viewer.<br>
 
 </body>
 </html>
