@@ -1,6 +1,5 @@
 
 
-SET( VERSION "2.6.8" )
 
 #
 # Project's subdirectories
